first version of interactive

--- a/config/pwa/manifest.json
+++ b/config/pwa/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "EdGame",
-  "name": "My Educational Phaser Game",
+  "short_name": "Yoda",
+  "name": "Baby Yoda",
   "icons": [
     {
       "src": "./icons/icons-192.png",
